--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <title>Digital Pay</title>
   </head>
   <body>
-    <code><a href='https://paypal.snowkel.us/50'>PHP 50.00 (Paypal)</a></code>
-    <code><a href='https://gcash.snowkel.us/50'>PHP 50.00 (GCash)</a></code>
+    <div carousell='product'>
+      <code><a href='https://paypal.snowkel.us/50'>PHP 50.00 (Paypal)</a></code>
+    </div>
+    <div carousell='product'>
+      <code><a href='https://gcash.snowkel.us/50'>PHP 50.00 (GCash)</a></code>
+    </div>
     <code>Digital Pay - Coming Soon..</code>
   </body>
 </html>
