--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <html>
   <head>
-    <title>Digital Pay</title>
+    <title>Digital Pay - Snowkelus</title>
+    <noscript><link rel='stylesheet' href='https://cdn.snowkel.us/acss/hero.stylesheet'/></noscript>
+    <link rel='stylesheet' href='https://cdn.snowkel.us/acss/hero.stylesheet'/>
+    <noscript><link rel='stylesheet' href='https://cdn.snowkel.us/template/digitalpay'/></noscript>
+    <link rel='stylesheet' href='https://cdn.snowkel.us/template/digitalpay'/>
   </head>
   <body>
-    <div carousell='product'>
-      <code><a href='https://paypal.snowkel.us/50'>PHP 50.00 (Paypal)</a></code>
+    <div about>
+      <div nav>
+        <code><a hero href='/'><span hero>Home</span></a></code>
+        <code><a hero href='/docx'><span hero>Documentations</span></a></code>
+        <code><a hero href='/pricing'><span hero>Pricing</span></a></code>
+      </div>
+      <div carousell='product'>
+        <code><a href='https://paypal.snowkel.us/50'>PHP 50.00 (Paypal)</a></code>
+      </div>
+      <div carousell='product'>
+        <code><a href='https://gcash.snowkel.us/50'>PHP 50.00 (GCash)</a></code>
+      </div>
+      <p><code desc='digitalpay'>Digital Pay - Coming Soon..</code></p>
     </div>
-    <div carousell='product'>
-      <code><a href='https://gcash.snowkel.us/50'>PHP 50.00 (GCash)</a></code>
-    </div>
-    <code>Digital Pay - Coming Soon..</code>
   </body>
 </html>
