--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div about>
       <div nav>
         <code><a hero href='/'><span hero>Home</span></a></code>
-        <code><a hero href='/docx'><span hero>Documentations</span></a></code>
-        <code><a hero href='/pricing'><span hero>Pricing</span></a></code>
+        <code><a hero href='/about'><span hero>About</span></a></code>
+        <code><a hero href='/oss'><span hero>Open Source</span></a></code>
       </div>
       <div carousell='product'>
         <code><a href='https://paypal.snowkel.us/50'>PHP 50.00 (Paypal)</a></code>
