--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       <div carousell='product'>
         <code><a href='https://gcash.snowkel.us/50'>PHP 50.00 (GCash)</a></code>
       </div>
-      <p><code desc='digitalpay'>Digital Pay - Coming Soon..</code></p>
+      <div carousell='product'>
+        <code desc='digitalpay'>Digital Pay - Coming Soon..</code>
+      </div>
     </div>
   </body>
 </html>
