--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <code><a hero href='/oss'><span hero>Open Source</span></a></code>
       </div>
       <div carousell='product'>
+        <div carousell='theme'></div>
         <code><a href='https://paypal.snowkel.us/50'>PHP 50.00 (Paypal)</a></code>
       </div>
       <div carousell='product'>
+        <div carousell='theme'></div>
         <code><a href='https://gcash.snowkel.us/50'>PHP 50.00 (GCash)</a></code>
       </div>
       <div carousell='product'>
