--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <code><a hero href='/oss'><span hero>Open Source</span></a></code>
       </div>
       <div circle>
-        <p><code desc='digitalpay'>Digital Pay - Coming Soon..</code></p>
+        <p><code desc='digitalpay'>Digital Pay - About..</code></p>
       </div>
     </div>
   </body>
