--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       </div>
       <div carousell='product'>
         <div carousell='theme'></div>
-        <code><a href='https://paypal.snowkel.us/50'>PHP 50.00 (Paypal)</a></code>
+        <code desc='digitalpay'><a href='https://paypal.snowkel.us/50'>PHP 50.00 (Paypal)</a></code>
       </div>
       <div carousell='product'>
         <div carousell='theme'></div>
-        <code><a href='https://gcash.snowkel.us/50'>PHP 50.00 (GCash)</a></code>
+        <code desc='digitalpay'><a href='https://gcash.snowkel.us/50'>PHP 50.00 (GCash)</a></code>
       </div>
       <div carousell='product'>
         <div carousell='theme'></div>
