--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <code><a hero href='/'><span hero>Home</span></a></code>
         <code><a hero href='/about'><span hero>About</span></a></code>
         <code><a hero href='/oss'><span hero>Open Source</span></a></code>
+        <code><a hero href='/Demo'><span hero>Demo</span></a></code>
       </div>
       <div carousell='product'>
         <div carousell='theme'></div>
