--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       </div>
       <div circle>
         <p><code desc='digitalpay'>Digital Pay - About..</code></p>
+        <p><code composer>Digital Pay is a Template Processor by Snowkelus Company's AmberstoneCSS Project, It is made to link several payment gateways into one and the project company is residing in the Philippines.. It was first intended as a Payment Processor here in my Family's business..</code></p>
       </div>
     </div>
   </body>
